--- a/views/home.html
+++ b/views/home.html
@@ -4,7 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mi primer documento en HTML</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;1,300&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="/css/normalize.css"> 
+    <link rel="stylesheet" href="/css/styles.css">
+
+<title>Mi primer documento en HTML</title>
 </head>
 <body>
     <h4>Soy un H4</h4>
@@ -13,7 +19,7 @@
 
     <img src="/img/yoda.png" alt="Imagen Yoda">
 
-    <p>Hola, soy un párrafo</p>
+    <p class="parrafo-destacado">Hola, soy un <strong>párrafo</strong></p>
 
     <ul>
         <li>Item 1</li>
